--- a/skyfolk/static/sass/amigos.sass
+++ b/skyfolk/static/sass/amigos.sass
@@ -62,8 +62,8 @@ html, body
 
 .container .personal-card .header .profile-user-bg:hover
   -webkit-transform: scale(1.1)
-  -moz-transition: scale(1.1)
-  transition: scale(1.1)
+  -moz-transform: scale(1.1)
+  transform: scale(1.1)
   border-color: $blueskyfolk
   opacity: 1
 
@@ -105,7 +105,12 @@ html, body
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4)
   margin-top: 20px
   border-radius: 3px
+  overflow: hidden
   padding: 10px
+  height: auto
+
+  & .personal-card
+    height: 100%
 
   & a
     text-decoration: none
@@ -124,7 +129,6 @@ html, body
 
   & .profile-user-bg
     position: relative
-    top: 70px
     width: 80px
     height: 80px
     margin: auto
@@ -136,6 +140,11 @@ html, body
     -moz-transition: all .3s ease-in
     transition: all .3s ease-in
 
+    &:hover
+      -webkit-transform: scale(1.1)
+      -moz-transform: scale(1.1)
+      transform: scale(1.1)
+
   & .pub-bg
     height: 120px
     position: relative
@@ -144,41 +153,21 @@ html, body
     border-radius: 3px
 
 .comm
-  height: auto
   font-size: 1.25em
   font-family: 'Open Sans', sans-serif
   color: #616161
   padding: 7px
   border-left: 3px solid tomato
-
-.comm h6
-  text-align: center
-  position: relative
-  top: -25px
-  margin-bottom: 10px
-  display: inline-block
-
-.comm span
-  position: relative
-  top: -30px
-  font-size: 13px
-
-.comm .img
-  position: relative
-  margin: auto
+  overflow: hidden
+  height: auto
 
 .comm img
-  width: 70px
-  height: 70px
-  border-radius: 100%
-  border: 2px solid rgba(44,44,44,0.777)
-  position: relative
-  top: -20px
+  width: 20px
+  height: 20px
   margin: auto
   left: 15px
 
-.comm figcaption
-  visibility: visible
+
 
 /* No items - Search */
 
