--- a/skyfolk/static/sass/amigos.sass
+++ b/skyfolk/static/sass/amigos.sass
@@ -131,6 +131,7 @@ html, body
     position: relative
     width: 80px
     height: 80px
+    top: 0
     margin: auto
     display: block
     border-radius: 3px
