--- a/skyfolk/templates/account/search.html
+++ b/skyfolk/templates/account/search.html
@@ -62,7 +62,7 @@
         <div class="col-lg-12">
             <div class="header">
                 {% if pub.profile.backImage %}
-                <img class="col-lg-12 col-md-12 col-sm-12 pub-bg" src="{{ pub.profile.backImage.url }}">
+                   <img class="back-profile-user" src="{{ pub.profile.backImage.url }}">
                    {% else %}
                    <img class="back-profile-user" src="{{ STATIC_URL }}img/backgrounds/5.jpg">
                 {% endif %}
