+ Version V1 + Mejora de la seguridad al hacer click en los botones de: Me gusta, No me gsuta, Añadir a timeline + Incorporacion del timeline

--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -392,7 +392,9 @@
                                         </div>
                                         <div class="controles">
                                             <ul>
+                                                {% if user.username == user_profile.username %}
                                                 <li class="fa fa-trash fa-lg"></li>
+                                                {% endif %}
                                                 <li class="fa fa-heart fa-lg"></li>
                                                 <li class="fa fa-tag fa-lg"></li>
                                                 <li class="fa fa-quote-left fa-lg"></li>
