--- a/skyfolk/static/css/setup.css
+++ b/skyfolk/static/css/setup.css
@@ -20,6 +20,9 @@ body {
     .div-messages ul li {
       display: list-item; }
 
+.ctrlHolder {
+  padding: 10px; }
+
 .wrapper {
   position: relative;
   margin-top: 10%; }
@@ -89,26 +92,7 @@ ul {
     margin-left: 7px;
     display: inline-block; }
 
-button {
-  background-color: #5A5550;
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-  border: 0;
-  cursor: pointer;
-  color: #ffffff;
-  margin-right: 30px;
-  font-size: 15px;
-  padding: 6px 17px;
-  text-decoration: none;
-  float: left;
-  position: relative;
-  margin-left: 2px;
-  font-family: "Lato", sans-serif;
-  outline: none;
-  transition: all 0.2s ease-in; }
-
-.lost-password-title {
+.lost-password-title, .title-email {
   text-align: center;
   color: grey; }
 
@@ -128,6 +112,52 @@ form {
   width: 40%;
   height: auto;
   margin: auto; }
+
+.email_list {
+  background-color: #eee;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15); }
+  .email_list label {
+    color: #616161;
+    display: inline-block;
+    font-size: 1.1em; }
+
+.verified {
+  color: #8bc34a; }
+
+.unverified {
+  color: tomato; }
+
+.primary {
+  color: #1e88e5; }
+
+button {
+  background-color: #64B5F6 !important;
+  position: relative;
+  cursor: pointer;
+  display: inline-block;
+  left: 10%;
+  overflow: hidden;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
+  z-index: 1;
+  text-decoration: none;
+  color: #FFF;
+  text-align: center;
+  letter-spacing: 1px;
+  border: none;
+  border-radius: 2px;
+  height: 36px;
+  line-height: 36px;
+  outline: 0;
+  padding: 0 2rem;
+  text-transform: uppercase; }
+
+button[name="action_add"] {
+  float: right !important;
+  left: 0; }
 
 input[type="submit"] {
   background-color: #64B5F6 !important;
@@ -154,7 +184,7 @@ input[type="submit"] {
   padding: 0 2rem;
   text-transform: uppercase; }
 
-input[type="email"]:focus {
+input[type="email"]:focus, button {
   border-bottom: 1px solid #64B5F6 !important;
   box-shadow: 0 1px 0 0 #64B5F6 !important; }
 
