--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -69,7 +69,7 @@
     {% endif %}
 
     <!-- MENU VERTICAL CON NOTIFICACIONES  -->
-    <div class="col-lg-3 col-md-8 col-sm-12 nav-vertical-and-chat">
+    <div id="notification-menu" class="col-lg-3 col-md-8 col-sm-12 nav-vertical-and-chat">
       <div class="col-lg-12 col-md-12 col-sm-12 notification-like">
         <div class="col-lg-2 col-md-2 col-sm-2 hexagon">
         <i class="fa fa-heart fa-lg"></i>
