--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -57,35 +57,12 @@
       <!-- BOTONES ESPACIALES PARA EL USUARIO QUE HACE LOGIN, SÓLO VISIBLE POR EL USUARIO QUE INICIA SESIÓN -->
       {% endif %}
       <!-- Menu principal - horizontal -->
-    </ul>
-    {% if user.profile.hiddenMenu == True %}
-      <ul class="oldMenu">
-        <li onclick="location.href='/'"><i class="fa fa-home" ></i> Inicio</li>
-        <li id="publish2"><i class="fa  fa-paper-plane"> </i> Mensaje</li>
-        <li onclick="location.href='/friends/{{ request.user }}'"><i class="fa fa-users"></i> Seguidos</li>
-        <li id="agregar-amigo"><i class="fa fa-user-plus"> </i> Agregar</li>
-        <li onclick="location.href='{% url 'account_logout' %}'"><i class="fa fa-sign-out"></i> Salir</li>
-      </ul>
-    {% endif %}
-
-    <!-- MENU VERTICAL CON NOTIFICACIONES  -->
-    <div id="notification-menu" class="col-lg-3 col-md-8 col-sm-12 nav-vertical-and-chat">
-      <div class="col-lg-12 col-md-12 col-sm-12 notification-like">
-        <div class="col-lg-2 col-md-2 col-sm-2 hexagon">
-        <i class="fa fa-heart fa-lg"></i>
-        </div>
-        <div class="col-lg-9 col-md-9 col-sm-9 notification-content">
-          <h4>¡<a>{{ request.user.username }}</a>, has recibido un me gusta!</h4>
-          <button class="fa fa-check notification-show"></button>
-        </div>
-      </div>
-      <div class="col-lg-12 col-md-12 col-sm-12 nav-vertical-controls">
-        <ul class="controls-notifications">
-          <li class="clear-notify"><a id="clear-notify">Limpiar notificaciones</a></li>
-        </ul>
-      </div>
-    </div>
-      <div id="loader"></div>
+        <!-- MENU HORIZONTAL - PANEL DE USUARIO -->
+        {% include "account/menu-horizontal.html" %}
+        <!-- MENU VERTICAL CON NOTIFICACIONES  -->
+        {% include "account/notification-right-menu.html" %}
+        <!-- LOADER DE TODA LA PÁGINA -->
+        <div id="loader"></div>
     </nav>
     <script src="{{STATIC_URL}}js/jquery.min.js"></script>
     <script src="{{STATIC_URL}}js/jquery-ui.js"></script>
