+ Django avatars + Cambiando todas las imagenes por django-avatars...

--- a/skyfolk/static/sass/miperfil.sass
+++ b/skyfolk/static/sass/miperfil.sass
@@ -504,11 +504,10 @@ body > .container
   background: red
 .user-card .user-avatar .user-pic
   background: white
-  padding: 0.1em
-  border: 1px solid #1e88e5
+  padding: 0
   border-radius: 0.3rem
   margin-top: -16.7em
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0.35)
+  box-shadow: 0 0 1px #1e88e5
 .user-pic
   width: 120px
   height: 120px
@@ -1304,6 +1303,11 @@ ul.table > li
   margin-left: auto
   margin-right: auto
 
+
+  & img
+    border-radius: 100%
+    border: 2px solid rgba(25,118,210,1)
+
 .info-paw .info-user-ciudad
   text-align: center
   font-size: 1em
@@ -1314,10 +1318,9 @@ ul.table > li
   color: tomato
 
 .info-paw .info-user-pic
-  width: 90px
-  height: 90px
+  width: 92px
+  height: 92px
   border-radius: 100%
-  border: 2px solid rgba(25,118,210,1)
 
 .trofeos
   position: absolute
