--- a/skyfolk/static/css/amigos.css
+++ b/skyfolk/static/css/amigos.css
@@ -53,6 +53,9 @@ html, body {
   -webkit-transition: all 0.3s ease-in;
   -moz-transition: all 0.3s ease-in;
   transition: all 0.3s ease-in; }
+  .container .personal-card .header .profile-user-bg img {
+    width: 100%;
+    height: 100%; }
 
 .container .personal-card .header .profile-user-bg:hover {
   -webkit-transform: scale(1.1);
