--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -100,7 +100,7 @@ a, a:visited {
   width: 100%;
   height: 100%;
   margin: auto; }
-
+.usr-img img {width: 100; height: 100%;}
 .wrapper .box .zoom-pub {
   position: relative;
   width: 20px;
@@ -156,8 +156,9 @@ input[type="checkbox"] {
 
 .ampliado .nombre_image {
   position: relative;
-  top: 10px;
+  top: 3px;
   width: 100%;
+  padding: 15px;
   border-bottom: 1px solid #eee; }
 
 .ampliado .nombre_image img {
@@ -165,7 +166,7 @@ input[type="checkbox"] {
   width: 50px;
   height: 50px;
   margin-left: 15px;
-  top: 5px;
+  top: 0;
   position: relative;
   border: 1px solid #21abcd; }
 
@@ -477,7 +478,6 @@ input[type="checkbox"] {
 
     .item:hover img {
       box-shadow: none;
-      border-radius: 10px;
     }
 
     .item:hover .informacion {
@@ -486,9 +486,8 @@ input[type="checkbox"] {
     }
 
     .item img {
-      display: block;
-      position: absolute;
-      top: 0;
+      position: relative;
+      margin: auto;
       border-radius: 3px;
       box-shadow: 0px 3px 8px rgba(0,0,0,0.3);
     }
