--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -558,11 +558,10 @@ body > .container {
 
 .user-card .user-avatar .user-pic {
   background: white;
-  padding: 0.1em;
-  border: 1px solid #1e88e5;
+  padding: 0;
   border-radius: 0.3rem;
   margin-top: -16.7em;
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0.35); }
+  box-shadow: 0 0 1px #1e88e5; }
 
 .user-pic {
   width: 120px;
@@ -1472,6 +1471,9 @@ ul.table > li {
   position: relative;
   margin-left: auto;
   margin-right: auto; }
+  .info-paw .info-wrapper-pic img {
+    border-radius: 100%;
+    border: 2px solid #1976d2; }
 
 .info-paw .info-user-ciudad {
   text-align: center;
@@ -1483,10 +1485,9 @@ ul.table > li {
   color: tomato; }
 
 .info-paw .info-user-pic {
-  width: 90px;
-  height: 90px;
-  border-radius: 100%;
-  border: 2px solid #1976d2; }
+  width: 92px;
+  height: 92px;
+  border-radius: 100%; }
 
 .trofeos {
   position: absolute;
