--- a/skyfolk/static/css/timeline.css
+++ b/skyfolk/static/css/timeline.css
@@ -106,6 +106,10 @@
     display: inline-block;
     top: -7px;
     right: 372.5px; }
+    #section .wrapperx .line .second .acontecimiento img {
+      border-radius: 100%;
+      width: 100%;
+      height: 100%; }
   #section .wrapperx .line .second .controles {
     position: relative;
     display: inline-block;
