--- a/skyfolk/static/sass/amigos.sass
+++ b/skyfolk/static/sass/amigos.sass
@@ -60,6 +60,10 @@ html, body
   -moz-transition: all .3s ease-in
   transition: all .3s ease-in
 
+  & img
+    width: 100%
+    height: 100%
+
 .container .personal-card .header .profile-user-bg:hover
   -webkit-transform: scale(1.1)
   -moz-transform: scale(1.1)
