--- a/skyfolk/static/sass/timeline.sass
+++ b/skyfolk/static/sass/timeline.sass
@@ -122,6 +122,11 @@
     top: -7px
     right: 372.5px
 
+    & img
+      border-radius: 100%
+      width: 100%
+      height: 100%
+
 
   & .line .second .controles
     position: relative
