--- a/skyfolk/templates/account/amigos.html
+++ b/skyfolk/templates/account/amigos.html
@@ -1,6 +1,6 @@
 {% extends 'account/base_interface.html' %}
 {% load app_filters %}
-
+{% load avatar_tags %}
 {% block title %} <title>Seguidores {{ request.user.username }}</title> {% endblock %}
 
 {% block extra-css %}
@@ -25,11 +25,14 @@
                 <i class="fa fa-user fa-2x like-him">
                 </i>
                 <div class="bg-user">
+                    {% comment %}
                     {% if item.user__profile__image and item.user__profile__image|file_exists %}
                         <img class="profile-user-bg" src="{{MEDIA_URL}}{{item.user__profile__image}}" onclick="location.href='/profile/{{ item.user__username }}'">
                     {% else %}
                         <img class="profile-user-bg" src="{{ STATIC_URL }}img/nuevo.png" onclick="location.href='/profile/{{ item.user__username }}'">
                     {% endif %}
+                    {% endcomment %}
+                     <div onclick="location.href='/profile/{{ item.user__username }}'" class="profile-user-bg">{% avatar item.user__username %}</div>
                 </div>
             </div>
         </div>
@@ -38,7 +41,6 @@
             <a href="/profile/{{ item.user__username }}">@{{ item.user__username }} </a><br><br>
                 <p>{{ item.user__first_name }} {{item.user__last_name}}</p>
             </div>
-
         </div>
     </div>
 </div>
