--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -1,20 +1,7 @@
     <nav class="box-tool">
     <ul class="box-tool-wrapper">
       <li>
-        <div id="toggle">
-          <ul class="menup">
-              {% if request.user.profile.image %}
-                <li onclick="location.href='/profile/{{ request.user }}'" class="profilee"><img src="{{ request.user.profile.image.url }}"><i>{{ request.user.username }}</i></li>
-              {% else %}
-               <li onclick="location.href='/profile/{{ request.user }}'" class="profilee"><img src="{{STATIC_URL}}img/nuevo.png"><i>{{ request.user.username }}</i></li>
-              {% endif %}
-            <li onclick="location.href='/config/profile'"><i class="fa fa-cog fa-lg"></i> Configuracion </li>
-            <li onclick="location.href='/messages/inbox/'"><i class="fa fa-inbox fa-lg"></i> Mensajes privados </li>
-            <li onclick="location.href='{% url 'account_logout' %}'"><i class="fa fa-sign-out"></i> Salir</li>
-            <li class="shortcut-keyboard"><i class="fa fa-keyboard-o"></i> Atajos</li>
-            <li onclick="location.href='/about/home'"><i class="fa fa-info-circle"></i> Ayuda</li>
-          </ul>
-        </div>
+        {% include "account/menu-vertical.html" %}
       </li>
 
       <li><div class="field" id="searchform">
@@ -26,36 +13,15 @@
           <div class="logotipo_skyfolk" onclick="location.href='/'"> <i>S</i>kyfolk</div>
         </li>
         <div>
+         <!-- Notificaciones para skyfolk - (Botón campana) -->
         <li class="notification-bell">
           <i class="fa fa-bell fa-lg"></i>
           <em onclick="contador()">{{n_likes}}</em>
           <button type="submit" id="hover-clear-notify"><i class="fa fa-trash fa-2x"></i></button> <!-- Mostrar "borrar notificaciones" al hacer hover -->
         </li>
-
-      <li><ul class="fa fa-bars fa-lg">
-            {% if user.profile.hiddenMenu == False %} <!-- Elección del usuario el menu a mostrar -->
-        <li class="fa-bars-content">
-          <ul>
-              <li class="fa fa-paper-plane fa-2x" id="publish2"> </li>
-              <li class="fa fa-home fa-2x" onclick="location.href='/'"> </li>
-              <li class="fa fa-users fa-2x" onclick="location.href='/friends/{{ request.user }}'"> </li>
-              <li class="fa fa-sign-out fa-2x" onclick="location.href='{% url 'account_logout' %}'"> </li>
-                {% if request.user.profile.image %}
-                  <li class="profile-user" onclick="location.href='/profile/{{ request.user }}'">
-                    <img src="{{request.user.profile.image.url}}">
-                  </li>
-                {% else %}
-                  <li class="profile-user" onclick="location.href='/profile/{{ request.user }}'">
-                    <img src="{{STATIC_URL}}img/nuevo.png">
-                  </li>
-                {% endif %}
-          </ul>
-        </li>
-        {% endif %}
-      </ul></li>
       {% if showPerfilButtons or user.username == user_profile.username %}
       <!-- BOTONES ESPACIALES PARA EL USUARIO QUE HACE LOGIN, SÓLO VISIBLE POR EL USUARIO QUE INICIA SESIÓN -->
-      {% endif %}
+        {% endif %}
       <!-- Menu principal - horizontal -->
         <!-- MENU HORIZONTAL - PANEL DE USUARIO -->
         {% include "account/menu-horizontal.html" %}
