--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -369,7 +369,7 @@
           <ul class="unstyled table fullwidth links">
             <li class="tab" id="li-tab-timeline"><a href="#tab-timeline">timeline</a></li>
 	    <li class="tab" id="li-tab-comentarios"><a href="#tab-comentarios">Comentarios</a></li>
-            <li class="tab" id="li-tab-amigos"><a href="#tab-amigos">Amigos</a></li>
+            <li class="tab" id="li-tab-amigos"><a href="#tab-amigos">Seguidos</a></li>
           </ul>
           <div class="unstyled content" id="hood-tabs">
         <div id="tab-timeline">
