--- a/skyfolk/templates/account/menu-horizontal.html
+++ b/skyfolk/templates/account/menu-horizontal.html
@@ -24,7 +24,7 @@
       <li><ul class="oldMenu">
         <li onclick="location.href='/'"><i class="fa fa-home" ></i> Inicio</li>
         <li id="publish2"><i class="fa  fa-paper-plane"> </i> Mensaje</li>
-        <li onclick="location.href='/friends/{{ request.user }}'"><i class="fa fa-users"></i> Seguidos</li>
+        <li onclick="location.href='/following/{{ request.user }}'"><i class="fa fa-user"></i> Seguidos</li>
         <li id="agregar-amigo"><i class="fa fa-user-plus"> </i> Agregar</li>
         <li onclick="location.href='{% url 'account_logout' %}'"><i class="fa fa-sign-out"></i> Salir</li>
       </ul></li>
