--- a/skyfolk/static/css/configuracion.css
+++ b/skyfolk/static/css/configuracion.css
@@ -123,7 +123,7 @@ h6 {
   width: 350px;
   margin-right: auto;
   margin-left: auto;
-  margin-top: 30%;
+  margin-top: 25%;
   height: auto;
   font-size: 1.4em; }
 
@@ -303,7 +303,21 @@ hgroup {
   font-family: "Open Sans", sans-serif; }
 
 .wrapper-profilex {
-  min-height: auto; }
+  min-height: initial; }
+  .wrapper-profilex #change-avatar {
+    position: absolute;
+    display: none;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin-left: auto;
+    margin-right: auto;
+    height: 50%;
+    background-color: #E0E0E0;
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+    z-index: 9999;
+    color: #424242;
+    padding: 15px; }
 
 .profilex {
   position: relative;
