--- a/skyfolk/templates/account/cf-profile.html
+++ b/skyfolk/templates/account/cf-profile.html
@@ -1,6 +1,6 @@
 {% extends "account/base_cf.html" %}
 {% block additional_files %}
-{% load avatar_tags %}
+{% load i18n avatar_tags %}
 
 {% endblock%}
 
@@ -15,6 +15,25 @@
 {% block cf-form %}
 	<form id='formulario' method='post' enctype='multipart/form-data' action=''>{% csrf_token %}
 	<div class="col-lg-12 col-md-12 col-sm-12 wrapper-profilex">
+
+        <div id="change-avatar" class="col-lg-10 col-md-10 col-sm-12">
+                <p>{% trans "Your current avatar: " %}</p>
+                {% avatar user %}
+                {% if not avatars %}
+                    <p>{% trans "You haven't uploaded an avatar yet. Please upload one now." %}</p>
+                {% else %}
+                    <form method="POST" action="{% url 'avatar_change' %}">
+                        <ul>
+                            {{ primary_avatar_form.as_ul }}
+                        </ul>
+                        <p>{% csrf_token %}<input type="submit" value="{% trans "Choose new Default" %}" /></p>
+                    </form>
+                {% endif %}
+                <form enctype="multipart/form-data" method="POST" action="{% url 'avatar_add' %}">
+                    {{ upload_avatar_form.as_p }}
+                    <p>{% csrf_token %}<input type="submit" value="{% trans "Upload New Image" %}" /></p>
+                </form>
+        </div>
 		{% if user_profile.profile.backImage %}
 			<div class="col-lg-12 col-md-12 col-sm-12 profilex" style="background: url('{{user_profile.profile.backImage.url}}') no-repeat center center; background-size: cover;">
 		{% else %}
