+ Interfaz django-avatar

--- a/avatar/templates/avatar/base.html
+++ b/avatar/templates/avatar/base.html
@@ -1,6 +1,8 @@
 <html>
     <head>
-        <title>{% block title %}django-avatar{% endblock %}</title>
+        <title>{% block title %}Configuración - Imágen de perfil.{% endblock %}</title>
+
+        <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/miperfil.css" />
     </head>
     <body>
         {% block content %}{% endblock %}
