--- a/avatar/templates/avatar/change.html
+++ b/avatar/templates/avatar/change.html
@@ -1,7 +1,12 @@
-{% extends "avatar/base.html" %}
+{% extends "account/base_interface.html" %}
 {% load i18n avatar_tags %}
 
+{% block extra-css %}
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/avatar.css" />
+{% endblock %}
+
 {% block content %}
+    <div id="change-avatar" class="col-lg-10 col-md-10 col-sm-12 ">
     <p>{% trans "Your current avatar: " %}</p>
     {% avatar user %}
     {% if not avatars %}
@@ -18,4 +23,5 @@
         {{ upload_avatar_form.as_p }}
         <p>{% csrf_token %}<input type="submit" value="{% trans "Upload New Image" %}" /></p>
     </form>
+    </div>
 {% endblock %}
