--- a/skyfolk/templates/account/cf-profile.html
+++ b/skyfolk/templates/account/cf-profile.html
@@ -16,24 +16,11 @@
 	<form id='formulario' method='post' enctype='multipart/form-data' action=''>{% csrf_token %}
 	<div class="col-lg-12 col-md-12 col-sm-12 wrapper-profilex">
 
+        {% comment %}
         <div id="change-avatar" class="col-lg-10 col-md-10 col-sm-12">
-                <p>{% trans "Your current avatar: " %}</p>
-                {% avatar user %}
-                {% if not avatars %}
-                    <p>{% trans "You haven't uploaded an avatar yet. Please upload one now." %}</p>
-                {% else %}
-                    <form method="POST" action="{% url 'avatar_change' %}">
-                        <ul>
-                            {{ primary_avatar_form.as_ul }}
-                        </ul>
-                        <p>{% csrf_token %}<input type="submit" value="{% trans "Choose new Default" %}" /></p>
-                    </form>
-                {% endif %}
-                <form enctype="multipart/form-data" method="POST" action="{% url 'avatar_add' %}">
-                    {{ upload_avatar_form.as_p }}
-                    <p>{% csrf_token %}<input type="submit" value="{% trans "Upload New Image" %}" /></p>
-                </form>
+
         </div>
+        {% endcomment %}
 		{% if user_profile.profile.backImage %}
 			<div class="col-lg-12 col-md-12 col-sm-12 profilex" style="background: url('{{user_profile.profile.backImage.url}}') no-repeat center center; background-size: cover;">
 		{% else %}
@@ -48,7 +35,7 @@
 		{% endcomment %}
 		<div class="img-profile">
 			<a href="{% url 'avatar_change' %}">
-			{% avatar user class="img-profile" %}
+			{% avatar user %}
 			</a>
 		</div>
 		</div>
