--- a/skyfolk/static/css/avatar.css
+++ b/skyfolk/static/css/avatar.css
@@ -18,11 +18,60 @@ body {
   margin-left: auto;
   margin-right: auto;
   height: 100%;
-  background-color: #fafafa;
+  background-color: #e0e0e0;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
-  z-index: 9999;
   color: #424242;
   padding: 15px;
   font-size: 1.4em; }
+  #change-avatar .current-avatar {
+    background-color: #eeeeee;
+    min-height: 30%;
+    height: auto;
+    padding: 10px; }
+    #change-avatar .current-avatar img, #change-avatar .current-avatar p {
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 30px;
+      text-align: center;
+      display: block; }
+    #change-avatar .current-avatar p {
+      margin-bottom: 20px; }
+  #change-avatar .options-avatar {
+    background-color: #eeeeee;
+    height: auto;
+    padding: 10px;
+    margin-top: 15%; }
+    #change-avatar .options-avatar img, #change-avatar .options-avatar label {
+      position: relative;
+      display: inline-block; }
+    #change-avatar .options-avatar label {
+      margin-bottom: 20px; }
+    #change-avatar .options-avatar ul {
+      border-radius: 3px; }
+      #change-avatar .options-avatar ul li {
+        margin-left: 15px;
+        margin-right: 15px;
+        padding: 5px;
+        display: inline-block; }
+    #change-avatar .options-avatar input {
+      border: medium none;
+      border-radius: 2px;
+      display: inline-block;
+      height: 36px;
+      line-height: 36px;
+      padding: 0px 2rem;
+      text-transform: uppercase;
+      text-decoration: none;
+      color: #1e88e5;
+      background-color: transparent;
+      text-align: center;
+      letter-spacing: 0.5px;
+      transition: all 0.2s ease-out 0s;
+      cursor: pointer;
+      float: right;
+      outline: none; }
+      #change-avatar .options-avatar input:hover {
+        opacity: 0.8;
+        background-color: #eee; }
 
 /*# sourceMappingURL=avatar.css.map */
