--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -100,7 +100,7 @@ a, a:visited {
   width: 100%;
   height: 100%;
   margin: auto; }
-.usr-img img {width: 100; height: 100%;}
+.usr-img img {width: 100%; height: 100%;}
 .wrapper .box .zoom-pub {
   position: relative;
   width: 20px;
