--- a/avatar/templates/avatar/add.html
+++ b/avatar/templates/avatar/add.html
@@ -1,10 +1,25 @@
-{% extends "account/base_interface.html" %}
+{% extends "account/base_cf.html" %}
 {% load i18n avatar_tags %}
 
-{% block content %}
-<div id="change-avatar" class="col-lg-10 col-md-10 col-sm-12 ">
+{% block title %} <title>Configuración - {{ request.user.username }} - Imágenes de perfil.</title> {% endblock %}
+
+{% block extra-css %}
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/avatar.css" />
+{% endblock %}
+
+{% block cf-title %}
+<hgroup>
+	<h4 class="cn"> Imágen de perfil </h4>
+	<h6 class="ch"> Añade una foto de perfil </h6>
+</hgroup>
+{% endblock %}
+
+{% block cf-form %}
+<div id="change-avatar" class="col-lg-12 col-md-10 col-sm-12 current-avatar">
     <p>{% trans "Your current avatar: " %}</p>
     {% avatar user %}
+</div>
+    <div id="option-avatar" class="col-lg-12 col-md-12 col-sm-12 options-avatar">
     {% if not avatars %}
         <p>{% trans "You haven't uploaded an avatar yet. Please upload one now." %}</p>
     {% endif %}
@@ -12,5 +27,6 @@
         {{ upload_avatar_form.as_p }}
         <p>{% csrf_token %}<input type="submit" value="{% trans "Upload New Image" %}" /></p>
     </form>
-</div>
+    </div>
+    </div>
 {% endblock %}
