--- a/avatar/templates/avatar/change.html
+++ b/avatar/templates/avatar/change.html
@@ -1,20 +1,43 @@
-{% extends "account/base_interface.html" %}
+{% extends "account/base_cf.html" %}
 {% load i18n avatar_tags %}
 
-{% block title %} <title>Configuración - {{ request.user.username }} - Imágenes de perfil.</title> {% endblock %}{% block extra-css %}
+{% block title %} <title>Configuración - {{ request.user.username }} - Imágenes de perfil.</title> {% endblock %}
+
+{% block extra-css %}
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/avatar.css" />
 {% endblock %}
 
-{% block content %}
-    <div id="change-avatar" class="col-lg-7 col-md-10 col-sm-12 ">
-        <div class="col-lg-12 col-md-10 col-sm-12 current-avatar">
+{% block extra-js %}
+      <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+<script>
+$(document).ready(function() {
+    $("#option-avatar").find("img").click(function() {
+        if ($('#option-avatar').find('img').size() == 1) {
+            $(this).toggleClass('active');
+        } else {
+            $("img").removeClass('active');
+            $(this).toggleClass('active');
+        }
+    });
+});
+</script>
+{% endblock %}
+{% block cf-title %}
+<hgroup>
+	<h4 class="cn"> Imágen de perfil </h4>
+	<h6 class="ch"> Elige y gestiona tus imágenes de perfil </h6>
+</hgroup>
+{% endblock %}
+
+{% block cf-form %}
+    <div class="col-lg-12 col-md-10 col-sm-12 current-avatar">
     <p>{% trans "Your current avatar: " %}</p>
     {% avatar user %}
         </div>
     {% if not avatars %}
         <p>{% trans "You haven't uploaded an avatar yet. Please upload one now." %}</p>
     {% else %}
-        <div class="col-lg-12 col-md-12 col-sm-12 options-avatar">
+        <div id="option-avatar" class="col-lg-12 col-md-12 col-sm-12 options-avatar">
         <form method="POST" action="{% url 'avatar_change' %}">
             <ul>
                 {{ primary_avatar_form.as_ul }}
@@ -27,6 +50,7 @@
         {{ upload_avatar_form.as_p }}
         <p>{% csrf_token %}<input type="submit" value="{% trans "Upload New Image" %}" /></p>
     </form>
+
         </div>
     </div>
 {% endblock %}
