--- a/skyfolk/static/css/configuracion.css
+++ b/skyfolk/static/css/configuracion.css
@@ -214,10 +214,9 @@ button[type="submit"] {
   padding: 0px 2rem;
   text-transform: uppercase;
   vertical-align: middle;
-  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16), 0px 2px 10px 0px rgba(0, 0, 0, 0.12);
   text-decoration: none;
-  color: #FFF;
-  background-color: #26A69A;
+  color: #1e88e5;
+  background-color: transparent;
   text-align: center;
   letter-spacing: 0.5px;
   transition: all 0.2s ease-out 0s;
@@ -225,6 +224,9 @@ button[type="submit"] {
   float: right;
   margin-right: 10%;
   outline: none; }
+  button[type="submit"]:hover {
+    background-color: #eee;
+    opacity: 0.8; }
 
 #boton-perfil, #btn {
   position: relative;
