--- a/skyfolk/static/css/configuracion.css
+++ b/skyfolk/static/css/configuracion.css
@@ -312,5 +312,35 @@ hgroup {
   height: 200px;
   box-shadow: 0px 1px 5px grey;
   background-color: transparent; }
+  .profilex .delete-profile-image, .profilex .add-profile-image {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    text-align: center;
+    top: 30px;
+    padding: 20px;
+    background-color: #eee;
+    color: #1e88e5;
+    display: inline-block;
+    -webkit-transition: all 0.3s ease-in;
+    -moz-transition: all 0.3s ease-in;
+    transition: all 0.3s ease-in; }
+    .profilex .delete-profile-image:hover, .profilex .add-profile-image:hover {
+      opacity: 0.8; }
+    .profilex .delete-profile-image:hover > i, .profilex .add-profile-image:hover > i {
+      -webkit-transform: scale(1.2);
+      -moz-transform: scale(1.2);
+      transform: scale(1.2); }
+    .profilex .delete-profile-image i, .profilex .add-profile-image i {
+      -webkit-transition: all 0.2s ease-in-out;
+      -moz-transition: all 0.2s ease-in-out;
+      transition: all 0.2s ease-in-out;
+      font-size: 2em; }
+  .profilex .add-profile-image {
+    left: 0;
+    margin-left: -62px; }
+  .profilex .delete-profile-image {
+    right: 0;
+    margin-right: -62px; }
 
 /*# sourceMappingURL=configuracion.css.map */
