--- a/skyfolk/static/sass/configuracion.sass
+++ b/skyfolk/static/sass/configuracion.sass
@@ -321,3 +321,36 @@ hgroup
   height: 200px
   box-shadow: 0px 1px 5px grey
   background-color: transparent
+
+  & .delete-profile-image, .add-profile-image
+    position: absolute
+    width: 60px
+    height: 60px
+    text-align: center
+    top: 30px
+    padding: 20px
+    background-color: #eee
+    color: $blueskyfolk
+    display: inline-block
+    -webkit-transition: all .3s ease-in
+    -moz-transition: all .3s ease-in
+    transition: all .3s ease-in
+    &:hover
+      opacity: 0.8
+    &:hover > i
+      -webkit-transform: scale(1.2)
+      -moz-transform: scale(1.2)
+      transform: scale(1.2)
+    & i
+      -webkit-transition: all .2s ease-in-out
+      -moz-transition: all .2s ease-in-out
+      transition: all .2s ease-in-out
+      font-size: 2em
+
+  & .add-profile-image
+    left: 0
+    margin-left: -62px
+
+  & .delete-profile-image
+    right: 0
+    margin-right: -62px
